<?xml version="1.0"?>
<package format="3">
  <name>tiago_challenge</name>
  <version>2.0.2</version>
  <description>Example on how to use the trajectory controller to make the robot reach some given waypoints</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="mh@todo.todo">mh</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>actionlib</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>rclcpp</depend>
  <depend>play_motion2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
